@@ -1,5 +1,6 @@
 0.4.4:
 - Close last tab now return to home page (thanks to Martin).
+- Downloaded files can now be open from the download list.
 - Fix download error when url contains a "?".
 - Spanish translation (thanks to Isaac L.).
 - Brazilian Portuguese translation (thanks to Cynthia R., Jéssica B. and Thales A.).
